# maccel

./: AGENTS.md  Cargo.toml  PLAN.md  README.md
config/: default.toml
crates/maccel/: Cargo.toml
crates/maccel/src/: config.rs  curve.rs  daemon.rs  device.rs  main.rs  pipeline.rs  uinput.rs
packaging/: install.sh  maccel.service
