[workspace]
members = ["crates/maccel"]
resolver = "2"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
license = "MIT"
authors = ["Tyler"]
repository = "https://github.com/im-tyler/maccel"
homepage = "https://github.com/im-tyler/maccel"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
